fix: bug fixes, dark mode

--- a/src/main/webapp/app/shared/components/atoms/upload-button/upload-button.component.scss
+++ b/src/main/webapp/app/shared/components/atoms/upload-button/upload-button.component.scss
@@ -1,36 +1,3 @@
-.border-primary {
-  border: solid var(--p-primary-color) 0.1rem;
-}
-
-.border-success {
-  border: solid var(--p-success-color) 0.1rem;
-}
-
-.border-neutral {
-  border: solid var(--p-background-disabled) 0.1rem;
-}
-
-.background-disabled {
-  background: var(--p-background-disabled);
-}
-
-.background-primary {
-  color: var(--p-primary-color);
-}
-
-.background-success {
-  color: var(--p-success-color);
-}
-
-.text-color {
-  color: var(--p-text-primary);
-}
-
-.drag-over {
-  border-color: var(--p-primary-color);
-  background: var(--p-primary-hover-color-outlined);
-}
-
 .slim-table {
   border-collapse: collapse;
   width: 100%;
@@ -39,9 +6,9 @@
 
 .slim-table th,
 .slim-table td {
-  border-right: 1px solid #ccc;
-  padding: 0px 5px;
-  font-size: 14px;
+  color: var(--p-text-color);
+  padding: 0ren 0.3rem;
+  font-size: 0.875rem;
   vertical-align: center;
   word-wrap: break-word;
   overflow-wrap: break-word;
@@ -53,9 +20,22 @@
 }
 
 .icon-color-success {
-  color: var(--p-success-color);
+  color: var(--p-success-disabled-color);
 }
 
 .icon-color-warning {
-  color: var(--p-warn-color);
+  color: var(--p-warn-disabled-color);
+}
+
+.editable-input {
+  width: 100%;
+  padding: 0.625rem 0.25rem;
+  font-size: 0.9rem;
+  border: 0.1rem var(--p-border-default) solid;
+  border-radius: 0.375rem;
+}
+
+.editable-input:focus {
+  outline: none;
+  border-color: var(--p-border-default);
 }
